--- a/src/main/frontend/src/styles/index.css
+++ b/src/main/frontend/src/styles/index.css
@@ -145,7 +145,15 @@ img {
   /* For dark mode */
   filter: grayscale(var(--image-grayscale)) opacity(var(--image-opacity));
 }
-
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3rem;
+}
+h3 {
+  font-size: 2rem;
+}
 /*
 FOR DARK MODE
 
